# projectmd

./: .gitignore  Cargo.toml  LICENSE  README.md  project.md
.github/workflows/: build.yml
src/: cli.rs  commands.rs  lib.rs  main.rs  parser.rs  projectmd.pest  sync.rs  types.rs
src/backend/: github.rs  mod.rs
tasks/: release.md  set_updated_at.md
tests/: README.md  parser_tests.rs
tests/fixtures/: complex.md  mixed_content.md  multiple_newlines.md  no_tasks.md  simple.md  trailing_newline.md  with_timestamps.md
